--- a/src/components/Cockpit/Cockpit.css
+++ b/src/components/Cockpit/Cockpit.css
@@ -4,7 +4,7 @@
 .bold {
   font-weight: bold;
 }
-.Cockpit button {
+.Button {
 	border: 1px solid blue;
 	padding: 16px;
 	background-color: green;
@@ -12,14 +12,14 @@
 	color: white;
 	cursor: pointer;
 }
-.Cockpit button:hover {
+.Button:hover {
 	background-color: lightgreen;
 	color: black;
 }
-.Cockpit button.Red {
+.Button.Red {
 	background-color: red;
 }
-.Cockpit button.Red:hover {
+.Button.Red:hover {
 	background-color: salmon;
 	color: black;
 }
